fixed text overlap on small screens

--- a/static/style.css
+++ b/static/style.css
@@ -136,6 +136,10 @@ main {
 	display: table-cell;
 }
 
+th {
+	vertical-align: top;
+}
+
 .result-card-header-buttons-container {
 	float: right;
 }
